# SPA-Web_application

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_options_alter_course_preview_and_more.py  0003_alter_lesson_course.py  0004_alter_course_preview.py  0005_alter_lesson_preview.py  0006_course_owner_lesson_owner.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_all_data.py  create_payments.py  create_superuser.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payments.py  0004_subscription.py  0005_payments_link_payments_session_id.py
